<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Compatible Numbers</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="webview">webview</string>
    <string name="enter_numbers">What are the two numbers ?</string>
    <string name="x">X</string>
    <string name="let_me_try">Let me try</string>
    <string name="show_me">Find Compatible Numbers</string>
    <string name="refresh">Refresh</string>
</resources>
